--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,5 @@
 theme: jekyll-theme-minimal
 title: Noah's homepage
 description: Bookmark this to keep an eye on my project updates!
+
+This is my GitHub Page for CS155.
